# RSDPTeam10_Jinwei

./: README.md
SLAM_2D_Learn/SLAM_2D_Learn/: learn_lslidar.md  requirements.txt
SLAM_2D_Learn/SLAM_2D_Learn/install/: local_setup.sh  setup.sh
SLAM_2D_Learn/SLAM_2D_Learn/log/: latest_build
SLAM_2D_Learn/SLAM_2D_Learn/src/Lslidar_ROS2_main/lslidar_catorgrapher/: package.xml  setup.py
SLAM_2D_Learn/SLAM_2D_Learn/src/Lslidar_ROS2_main/lslidar_catorgrapher/launch/: catorgrapher_calc.py  catorgrapher_launch.py
SLAM_2D_Learn/SLAM_2D_Learn/src/leo_explore/: package.xml  setup.py
ros2_ws/src/leo_gz_bringup/launch/: rover_sim.launch.py
ros2_ws/src/navigation_2/: README.md
ros2_ws/src/navigation_2/config/: neo_robot.yaml
ros2_ws/src/navigation_2/launch/: navigation.launch.py
ros2_ws/src/navigation_2/navigation_2/: navigation_service_node.py
ros2_ws/src/rover_controller/: PLAN.md  package.xml  setup.py
ros2_ws/src/rover_controller/launch/: launch_sim.py
ros2_ws/src/rover_controller/rover_controller/: handle_observations.py  rover_controller.py
ros2_ws/src/rover_description/: CMakeLists.txt
ros2_ws/src/rover_description/hooks/: gz_sim_resource_path.sh
ros2_ws/src/rover_description/urdf/: rover.urdf.xacro  team_10_rover.urdf.xacro
ros2_ws/src/rover_gz_bringup/launch/: rover_sim.launch.py  spawn_robot.launch.py
ros2_ws/src/rover_interface/: CMakeLists.txt
ros2_ws/src/rover_interface/msg/: BinPose.msg  (+2 more)
ros2_ws/src/rover_sim_stubs/: setup.py
ros2_ws/src/rover_slam/: package.xml  setup.py
ros2_ws/src/rsdp_perception/: README.md  setup.py
(+56 files in other folders)
